--- a/algorithms/alpha_beta_pruning_minimax_tictactoe.ipynb
+++ b/algorithms/alpha_beta_pruning_minimax_tictactoe.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Algoritmo MiniMax"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -25,7 +18,7 @@
     "                              ['.','.','.'],\n",
     "                              ['.','.','.']]\n",
     "\n",
-    "        # Giocatore che gioca per primo\n",
+    "        # Il giocatore X gioca sempre per primo\n",
     "        self.player_turn = 'X'\n",
     "\n",
     "    def draw_board(self):\n",
@@ -34,6 +27,7 @@
     "                print('{}|'.format(self.current_state[i][j]), end=\" \")\n",
     "            print()\n",
     "        print()\n",
+    "        \n",
     "        \n",
     "    # Verifica se la mossa giocata è legale\n",
     "    def is_valid(self, px, py):\n",
@@ -44,7 +38,8 @@
     "        else:\n",
     "            return True\n",
     "    \n",
-    "    # Verifica se lo stato è terminale, e in tal caso restituisce il vincitore\n",
+    "    \n",
+    "    # Veifica se il gioco è terminato, e in tal caso restituisce il vincitore\n",
     "    def is_end(self):\n",
     "        \n",
     "        # Vittoria su una colonna\n",
@@ -79,113 +74,88 @@
     "                # C'è una casella vuota; il gioco può continuare.\n",
     "                if (self.current_state[i][j] == '.'):\n",
     "                    return None\n",
-    "        # E' patta!\n",
+    "        # E' patta\n",
     "        return 'patta'\n",
     "    \n",
-    "    \n",
-    "    # Il giocatore 'O' è max, in questo caso AI\n",
-    "    def max(self):\n",
-    "\n",
-    "        # I possibili valori per maxv sono:\n",
-    "        # -1 - sconfitta\n",
-    "        # 0  - patta\n",
-    "        # 1  - vittoria\n",
-    "\n",
-    "        # Inizialmente impostiamo maxv a un low value:\n",
+    "                \n",
+    "                \n",
+    "    def max_alpha_beta(self, alpha, beta):\n",
+    "        \n",
     "        maxv = -np.inf\n",
-    "\n",
     "        px = None\n",
     "        py = None\n",
     "\n",
     "        result = self.is_end()\n",
     "\n",
-    "        # Se siamo arrivati a uno stato terminale, il metodo deve restituire\n",
-    "        # il valore della \"funzione di utilità\"  dello stato. \n",
-    "        # Essa può essere:\n",
-    "        # -1 - sconfitta\n",
-    "        # 0  - patta\n",
-    "        # 1  - vittoria\n",
-    "        \n",
-    "        if result == 'X':        # ha vinto il giocatore X\n",
+    "        if result == 'X':\n",
     "            return (-1, 0, 0)\n",
-    "        elif result == 'O':      # ha vinto il giocatore O\n",
+    "        elif result == 'O':\n",
     "            return (1, 0, 0)\n",
-    "        elif result == 'patta':  # la partita è patta\n",
+    "        elif result == 'patta':\n",
     "            return (0, 0, 0)\n",
     "\n",
     "        for i in range(0, 3):\n",
     "            for j in range(0, 3):\n",
     "                if self.current_state[i][j] == '.':\n",
-    "                    # Nella casella vuota il giocatore 'O' fa una mossa e chiama min\n",
     "                    self.current_state[i][j] = 'O'\n",
-    "                    (m, min_i, min_j) = self.min() \n",
-    "                    \n",
-    "                    # aggiorniamo il valore minimax corrente\n",
-    "                    # e la mossa corrispondente se necessario\n",
+    "                    (m, min_i, min_j) = self.min_alpha_beta(alpha, beta)\n",
     "                    if m > maxv:\n",
     "                        maxv = m\n",
     "                        px = i\n",
     "                        py = j\n",
-    "                        \n",
-    "                    # Impostiamo di nuovo la casella a vuota.\n",
     "                    self.current_state[i][j] = '.'\n",
+    "\n",
+    "                    if maxv >= beta:\n",
+    "                        return (maxv, px, py)\n",
+    "\n",
+    "                    if maxv > alpha:\n",
+    "                        alpha = maxv\n",
+    "\n",
     "        return (maxv, px, py)\n",
     "    \n",
     "    \n",
-    "    # Il giocatore 'X' è min, in questo caso l'utente\n",
-    "    def min(self):\n",
+    "    \n",
+    "    def min_alpha_beta(self, alpha, beta):\n",
     "\n",
-    "        # I possibili valori per minv sono:\n",
-    "        # -1 - vittoria\n",
-    "        # 0  - patta\n",
-    "        # 1  - sconfitta\n",
-    "\n",
-    "        # Inizialmente impostiamo minv a un high value:\n",
     "        minv = np.inf\n",
     "\n",
     "        qx = None\n",
     "        qy = None\n",
     "\n",
     "        result = self.is_end()\n",
-    "        \n",
-    "        # Se siamo arrivati a uno stato terminale, il metodo deve restituire\n",
-    "        # il valore della \"funzione di utilità\"  dello stato. \n",
-    "        # Essa può essere:\n",
-    "        # -1 - vittoria\n",
-    "        # 0  - patta\n",
-    "        # 1  - sconfitta\n",
     "\n",
-    "        if result == 'X':        # ha vinto il giocatore X\n",
+    "        if result == 'X':\n",
     "            return (-1, 0, 0)\n",
-    "        elif result == 'O':      # ha vinto il giocatore O\n",
+    "        elif result == 'O':\n",
     "            return (1, 0, 0)\n",
-    "        elif result == 'patta':  # la partita è patta\n",
+    "        elif result == 'patta':\n",
     "            return (0, 0, 0)\n",
     "\n",
     "        for i in range(0, 3):\n",
     "            for j in range(0, 3):\n",
     "                if self.current_state[i][j] == '.':\n",
-    "                    # Nella casella vuota il giocatore 'X' fa una mossa e chiama max\n",
     "                    self.current_state[i][j] = 'X'\n",
-    "                    (m, max_i, max_j) = self.max()\n",
-    "                    \n",
-    "                    # aggiorniamo il valore minimax corrente\n",
-    "                    # e la mossa corrispondente se necessario\n",
+    "                    (m, max_i, max_j) = self.max_alpha_beta(alpha, beta)\n",
     "                    if m < minv:\n",
     "                        minv = m\n",
     "                        qx = i\n",
     "                        qy = j\n",
     "                    self.current_state[i][j] = '.'\n",
     "\n",
+    "                    if minv <= alpha:\n",
+    "                        return (minv, qx, qy)\n",
+    "\n",
+    "                    if minv < beta:\n",
+    "                        beta = minv\n",
+    "\n",
     "        return (minv, qx, qy)\n",
     "    \n",
     "    \n",
-    "    def play(self):\n",
+    "    def play_alpha_beta(self):\n",
     "        while True:\n",
     "            self.draw_board()\n",
     "            self.result = self.is_end()\n",
     "\n",
-    "            # Stampa dell'appropriato messaggio se il gioco è finito\n",
     "            if self.result != None:\n",
     "                if self.result == 'X':\n",
     "                    print('Il vincitore è X!')\n",
@@ -195,12 +165,11 @@
     "                    print('La partita è patta!')\n",
     "                return\n",
     "\n",
-    "            # E' il turno dell'utente\n",
     "            if self.player_turn == 'X':\n",
-    "                while True:\n",
     "\n",
+    "                while True:\n",
     "                    start = time.time()\n",
-    "                    (m, qx, qy) = self.min()\n",
+    "                    (m, qx, qy) = self.min_alpha_beta(-2, 2)\n",
     "                    end = time.time()\n",
     "                    print('Evaluation time: {}s'.format(round(end - start, 7)))\n",
     "                    print('Mossa raccomandata: X = {}, Y = {}'.format(qx, qy))\n",
@@ -215,27 +184,95 @@
     "                    else:\n",
     "                        print('La mossa non è valida! Prova ancora.')\n",
     "\n",
-    "            # E' il turno di AI\n",
     "            else:\n",
-    "                (m, px, py) = self.max()\n",
+    "                (m, px, py) = self.max_alpha_beta(-2, 2)\n",
     "                self.current_state[px][py] = 'O'\n",
-    "                self.player_turn = 'X'"
+    "                self.player_turn = 'X'    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".| .| .| \n",
+      ".| .| .| \n",
+      ".| .| .| \n",
+      "\n",
+      "Evaluation time: 0.092447s\n",
+      "Mossa raccomandata: X = 0, Y = 0\n",
+      "Inserisci l'indice di riga: 0\n",
+      "Inserisci l'indice di colonna: 2\n",
+      ".| .| X| \n",
+      ".| .| .| \n",
+      ".| .| .| \n",
+      "\n",
+      ".| .| X| \n",
+      ".| O| .| \n",
+      ".| .| .| \n",
+      "\n",
+      "Evaluation time: 0.0106308s\n",
+      "Mossa raccomandata: X = 0, Y = 0\n",
+      "Inserisci l'indice di riga: 0\n",
+      "Inserisci l'indice di colonna: 0\n",
+      "X| .| X| \n",
+      ".| O| .| \n",
+      ".| .| .| \n",
+      "\n",
+      "X| O| X| \n",
+      ".| O| .| \n",
+      ".| .| .| \n",
+      "\n",
+      "Evaluation time: 0.0007739s\n",
+      "Mossa raccomandata: X = 2, Y = 1\n",
+      "Inserisci l'indice di riga: 2\n",
+      "Inserisci l'indice di colonna: 1\n",
+      "X| O| X| \n",
+      ".| O| .| \n",
+      ".| X| .| \n",
+      "\n",
+      "X| O| X| \n",
+      "O| O| .| \n",
+      ".| X| .| \n",
+      "\n",
+      "Evaluation time: 8.61e-05s\n",
+      "Mossa raccomandata: X = 1, Y = 2\n",
+      "Inserisci l'indice di riga: 1\n",
+      "Inserisci l'indice di colonna: 2\n",
+      "X| O| X| \n",
+      "O| O| X| \n",
+      ".| X| .| \n",
+      "\n",
+      "X| O| X| \n",
+      "O| O| X| \n",
+      ".| X| O| \n",
+      "\n",
+      "Evaluation time: 1.57e-05s\n",
+      "Mossa raccomandata: X = 2, Y = 0\n",
+      "Inserisci l'indice di riga: 2\n",
+      "Inserisci l'indice di colonna: 0\n",
+      "X| O| X| \n",
+      "O| O| X| \n",
+      "X| X| O| \n",
+      "\n",
+      "La partita è patta!\n"
+     ]
+    }
+   ],
    "source": [
     "g = Game()\n",
-    "g.play()"
+    "g.play_alpha_beta()\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -249,12 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "c149fc0de0885611b468a0cc37d69aa5a86a4dd00b4e9702a10e3c4cb95c4c6c"
-   }
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
