--- a/algorithms/tabu_search_nQueens.ipynb
+++ b/algorithms/tabu_search_nQueens.ipynb
@@ -1,22 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "6227972c",
-   "metadata": {},
-   "source": [
-    "# Tabu Search per Problema delle N Regine "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dea4d193",
-   "metadata": {},
-   "source": [
-    "# Import"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "2e99192a",
@@ -26,14 +10,6 @@
     "import random\n",
     "import numpy as np\n",
     "import copy"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "62421e9b",
-   "metadata": {},
-   "source": [
-    "## Inizializzazione stato"
    ]
   },
   {
@@ -70,14 +46,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "72ee3aea",
-   "metadata": {},
-   "source": [
-    "## Generazione Successori di uno Stato"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "33138ba5",
@@ -103,14 +71,6 @@
     "\n",
     "    lista.sort(key=lambda x: x[1])  # ordiniamo i successori in base alla loro valutazione eval_stato\n",
     "    return(lista)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c260196d",
-   "metadata": {},
-   "source": [
-    "## Funzione per la Valutazione di uno Stato (calcolo attacchi)"
    ]
   },
   {
@@ -158,14 +118,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "331703f0",
-   "metadata": {},
-   "source": [
-    "## Test Assenza Mossa nella Lista Tabu"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "d8c99967",
@@ -180,14 +132,6 @@
     "    else:\n",
     "        assente = True\n",
     "    return(assente)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5fd3bbb7",
-   "metadata": {},
-   "source": [
-    "## Stampa scacchiera"
    ]
   },
   {
@@ -212,14 +156,6 @@
     "                print(\".   \",end=''),\n",
     "        print(\"\\n\")\n",
     "    print(\"\\n\\n\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d8df7116",
-   "metadata": {},
-   "source": [
-    "## Algoritmo Tabu Search"
    ]
   },
   {
@@ -295,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DIMENSIONE = 30   # dimensione dei lati della scacchiera N x N (dove N è la DIMENSIONE)"
+    "DIMENSIONE = 10   # dimensione dei lati della scacchiera N x N (dove N è la DIMENSIONE)"
    ]
   },
   {
@@ -310,61 +246,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numero successori:  435 \n",
+      "Numero successori:  45 \n",
       "\n",
       "Iterazione  0 :\n",
-      "next_state:  46\n",
-      "best_eval = 46\n",
-      "mossa: (0, 16)\n",
-      "tabu_list: {(0, 16): 5} \n",
-      "\n",
-      "Iterazione  1 :\n",
-      "next_state:  32\n",
-      "best_eval = 32\n",
-      "mossa: (3, 9)\n",
-      "tabu_list: {(0, 16): 4, (3, 9): 5} \n",
-      "\n",
-      "Iterazione  2 :\n",
-      "next_state:  20\n",
-      "best_eval = 20\n",
-      "mossa: (17, 28)\n",
-      "tabu_list: {(0, 16): 3, (3, 9): 4, (17, 28): 5} \n",
-      "\n",
-      "Iterazione  3 :\n",
-      "next_state:  14\n",
-      "best_eval = 14\n",
-      "mossa: (4, 19)\n",
-      "tabu_list: {(0, 16): 2, (3, 9): 3, (17, 28): 4, (4, 19): 5} \n",
-      "\n",
-      "Iterazione  4 :\n",
-      "next_state:  10\n",
-      "best_eval = 10\n",
-      "mossa: (19, 24)\n",
-      "tabu_list: {(0, 16): 1, (3, 9): 2, (17, 28): 3, (4, 19): 4, (19, 24): 5} \n",
-      "\n",
-      "Iterazione  5 :\n",
-      "next_state:  6\n",
-      "best_eval = 6\n",
-      "mossa: (15, 26)\n",
-      "tabu_list: {(3, 9): 1, (17, 28): 2, (4, 19): 3, (19, 24): 4, (15, 26): 5} \n",
-      "\n",
-      "Iterazione  6 :\n",
       "next_state:  4\n",
       "best_eval = 4\n",
-      "mossa: (6, 10)\n",
-      "tabu_list: {(17, 28): 1, (4, 19): 2, (19, 24): 3, (15, 26): 4, (6, 10): 5} \n",
+      "mossa: (4, 3)\n",
+      "tabu_list: {(4, 3): 5} \n",
       "\n",
-      "Iterazione  7 :\n",
+      "Iterazione  1 :\n",
+      "next_state:  4\n",
+      "best_eval = 4\n",
+      "mossa: (0, 4)\n",
+      "tabu_list: {(4, 3): 4, (0, 4): 5} \n",
+      "\n",
+      "Iterazione  2 :\n",
       "next_state:  2\n",
       "best_eval = 2\n",
-      "mossa: (16, 26)\n",
-      "tabu_list: {(4, 19): 1, (19, 24): 2, (15, 26): 3, (6, 10): 4, (16, 26): 5} \n",
+      "mossa: (5, 2)\n",
+      "tabu_list: {(4, 3): 3, (0, 4): 4, (5, 2): 5} \n",
       "\n",
-      "Iterazione  8 :\n",
+      "Iterazione  3 :\n",
+      "next_state:  2\n",
+      "best_eval = 2\n",
+      "mossa: (9, 6)\n",
+      "tabu_list: {(4, 3): 2, (0, 4): 3, (5, 2): 4, (9, 6): 5} \n",
+      "\n",
+      "Iterazione  4 :\n",
       "next_state:  0\n",
       "best_eval = 0\n",
-      "mossa: (21, 4)\n",
-      "tabu_list: {(19, 24): 1, (15, 26): 2, (6, 10): 3, (16, 26): 4, (21, 4): 5} \n",
+      "mossa: (3, 8)\n",
+      "tabu_list: {(4, 3): 1, (0, 4): 2, (5, 2): 3, (9, 6): 4, (3, 8): 5} \n",
       "\n"
      ]
     }
@@ -382,8 +294,7 @@
     {
      "data": {
       "text/plain": [
-       "array([26, 10, 12,  9, 24, 18,  3,  6, 25, 23, 14, 16,  8,  2, 15,  7,  0,\n",
-       "       28, 20, 27,  1,  4, 22, 13, 17,  5, 29, 21, 19, 11])"
+       "array([4, 6, 8, 2, 7, 1, 3, 5, 0, 9])"
       ]
      },
      "execution_count": 10,
@@ -427,65 +338,25 @@
      "output_type": "stream",
      "text": [
       "SCACCHIERA\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
+      ".   .   .   .   .   .   .   .   Q   .   \n",
       "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   \n",
+      ".   .   .   .   .   Q   .   .   .   .   \n",
       "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
+      ".   .   .   Q   .   .   .   .   .   .   \n",
       "\n",
-      ".   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
+      ".   .   .   .   .   .   Q   .   .   .   \n",
       "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   \n",
+      "Q   .   .   .   .   .   .   .   .   .   \n",
       "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   \n",
+      ".   .   .   .   .   .   .   Q   .   .   \n",
       "\n",
-      ".   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
+      ".   Q   .   .   .   .   .   .   .   .   \n",
       "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
+      ".   .   .   .   Q   .   .   .   .   .   \n",
       "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
+      ".   .   Q   .   .   .   .   .   .   .   \n",
       "\n",
-      ".   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   \n",
-      "\n",
-      ".   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      "Q   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   .   .   .   .   .   .   .   .   .   \n",
-      "\n",
-      ".   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   Q   .   .   .   \n",
+      ".   .   .   .   .   .   .   .   .   Q   \n",
       "\n",
       "\n",
       "\n",
@@ -496,19 +367,11 @@
    "source": [
     "stampa(soluzione)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a5c9b78",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -523,6 +386,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c149fc0de0885611b468a0cc37d69aa5a86a4dd00b4e9702a10e3c4cb95c4c6c"
+   }
   }
  },
  "nbformat": 4,
