--- a/algorithms/tabu_search_tsp.ipynb
+++ b/algorithms/tabu_search_tsp.ipynb
@@ -1,24 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "6227972c",
-   "metadata": {},
-   "source": [
-    "# Tabu Search per TSP "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b3e6450d",
-   "metadata": {},
-   "source": [
-    "## Import"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "2e547f9c",
    "metadata": {},
    "outputs": [],
@@ -27,16 +11,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b2471bd4",
-   "metadata": {},
-   "source": [
-    "## Funzione per la Valutazione di uno Stato (calcolo lunghezza percorso)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "2ac544fc",
    "metadata": {},
    "outputs": [],
@@ -58,16 +34,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "35b9bd5f",
-   "metadata": {},
-   "source": [
-    "## Funzione per la Generazione del Neighborhood"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "a59fcc7c",
    "metadata": {},
    "outputs": [],
@@ -95,16 +63,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "37081547",
-   "metadata": {},
-   "source": [
-    "## Test Assenza Mossa nella Lista Tabu"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "c228166b",
    "metadata": {},
    "outputs": [],
@@ -120,16 +80,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "896bd517",
-   "metadata": {},
-   "source": [
-    "## Algoritmo Tabu Search"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "d9186eef",
    "metadata": {},
    "outputs": [],
@@ -185,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "328b352f",
    "metadata": {},
    "outputs": [],
@@ -203,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "23263e0a",
    "metadata": {},
    "outputs": [],
@@ -213,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "754256cb",
    "metadata": {},
    "outputs": [
@@ -223,7 +175,7 @@
        "(['C', 'B', 'D', 'A', 'E', 'C'], 8)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,19 +183,11 @@
    "source": [
     "tabu_search(stato, 3, connections)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1899e05c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -258,6 +202,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c149fc0de0885611b468a0cc37d69aa5a86a4dd00b4e9702a10e3c4cb95c4c6c"
+   }
   }
  },
  "nbformat": 4,
